--- a/src/styles/MeetDocs.css
+++ b/src/styles/MeetDocs.css
@@ -14,7 +14,7 @@
   left: 0; /* Position it horizontally in the middle of the page */
   width: 100%;
   height: 330px; /* Adjust the height of the line */
-  background-color: #55739b;
+  background-color: #767779;
   transform: translateX(-50%) translateY(-50%); /* Center the line both horizontally and vertically */
   transition: transform 2s ease-in-out; /* The animation */
   margin-top: 8%;
@@ -37,7 +37,7 @@
 .doc-text p {
   font-size: 2rem;
   line-height: 1.6;
-  color: #e3e0e0;
+  color: #0a0909;
   margin: 0;
   /* font-family: 'raleway', sans-serif; */
   font-family: 'EB Garamond', serif;
