build is successful. still finishing styling

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -40,7 +40,7 @@
     letter-spacing: 2px;
     height: auto;
     min-height: auto;
-    margin-top: 10px;
+    /* margin-top: 10px; */
   }
   
   /* Footer headings */
