--- a/src/styles/MeetDocs.css
+++ b/src/styles/MeetDocs.css
@@ -2,89 +2,10 @@
   position: relative;
   text-align: center;
   padding-top: 2rem;
-  height: 750px; /* Adjust the height as needed */
+  /* height: 750px;  */
   overflow: hidden;
-  background-color: #fff;
+  background-color: #e7e5e5;
   min-height: 100vh;
-}
-
-/* The blue line initially hidden off-screen to the left */
-.blue-line {
-  position: absolute;
-  left: 0; /* Position it horizontally in the middle of the page */
-  width: 100%;
-  height: 330px; /* Adjust the height of the line */
-  background-color: #767779;
-  transform: translateX(-50%) translateY(-50%); /* Center the line both horizontally and vertically */
-  transition: transform 2s ease-in-out; /* The animation */
-  margin-top: 8%;
-  border-radius: 2px;
-}
-
-/* When the section is in view, apply the animation */
-.doc-page.animate-line .blue-line {
-  transform: translateX(0); /* Move it to the right */
-}
-
-.doc-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 1rem;
-}
-
-.doc-text p {
-  font-size: 2rem;
-  line-height: 1.6;
-  color: #0a0909;
-  margin: 0;
-  /* font-family: 'raleway', sans-serif; */
-  font-family: 'EB Garamond', serif;
-}
-
-
-/* Style the Owl Carousel container */
-.owl-carousel {
-  position: relative;
-  display: flex;
-  justify-content: center; /* Centers images horizontally */
-}
-
-/* Style for carousel items */
-.doc-page .owl-carousel .carousel-item {
-  display: flex;
-  justify-content: center; /* Centers the image-pair horizontally */
-  align-items: center; /* Vertically center content */
-  margin-bottom: 10%;
-}
-
-/* Style for the image pair container */
-.doc-page .owl-carousel .image-pair {
-  display: flex;         /* Display images side by side */
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;      /* Wrap items if the screen is smaller */
-  gap: 2rem;            /* Space between images */
-}
-
-/* Style for the images inside the image-pair */
-.doc-page .owl-carousel .image-pair img {
-  /* width: 400px;          */
-  height: 400px;        /* Make the height the same as width */
-  object-fit: cover;    /* Ensure the image covers the area without distorting */
-  border-radius: 50%;   /* Makes the image round */
-  margin-top: 10%;
-}
-
-/* Carousel dots */
-.doc-page .owl-carousel .owl-dots {
-  text-align: center;
-  position: absolute; /* Position it properly */
-  bottom: 10px; /* Place it slightly above the bottom */
-  left: 50%;
-  transform: translateX(-50%); /* Center it horizontally */
-  z-index: 20; 
 }
 
 /* Style for the heading "Meet Our Doctors" */
