--- a/src/styles/OwlCarouselWrapper.css
+++ b/src/styles/OwlCarouselWrapper.css
@@ -59,18 +59,27 @@
    */
 
    .carousel-item {
+    display: grid;
+    grid-template-columns: repeat(2,  1fr);
+    gap: 10px;
+    padding: 50px 20px;
+    background-color: #e7e5e5;
+    margin: auto;
+   }
+   .carousel-item .doc-image-container {
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     text-align: center;
-   }
-   .carousel-item .doc-image-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 50px 20px;
-    background-color: #e7e5e5;
+    display: flex;
+    flex-direction: column; /* Makes the image and text stack vertically */
+    max-width: 400px; 
+    align-items: center; 
+    justify-content: center;
+    margin: auto;
+    margin-bottom: 20px;
+    
    }
 
    .doc-image-container .image-pair img {
@@ -78,9 +87,9 @@
     height: 250px;
     object-fit: cover;
     border-radius: 3px;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
   }
 
-  .carousel-container {
+  /* .carousel-container {
     background-color: #e7e5e5;
-  }
+  } */
