--- a/src/styles/Review.css
+++ b/src/styles/Review.css
@@ -1,18 +1,18 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
 
-.page-review {
+.page-review  {
   padding: 20px;
-  /* display: flex;                     
-  justify-content: center;           
-  align-items: center;  */
- height: 500px;
-  
+  /* display: flex;
+  justify-content: center; */
+  height: 500px;
 }
 
 .page-review .review-content {
-  display: block;                    /* Make it a block-level container, not flex */
-  text-align: center; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .page-review .img-section {
@@ -38,9 +38,9 @@
 }
 
 .page-review .slick-dots {
-  position: absolute;
+  position: relative;
   /* bottom: 10px; */
-  left: 0;
+  /* left: 0; */
   width: 100%;
   display: flex;
   justify-content: center;
