trying a new picture. working on styling

--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -1,7 +1,7 @@
 .services-section {
     padding: 40px 20px;
     text-align: center;
-    background-color: rgb(236, 232, 232);
+    background-color: #e7e5e5;
    
   }
   
