--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -28,14 +28,14 @@
   .content {
     position: relative;
     z-index: 2;
-    color: rgb(84, 81, 81);
+    color: black;
     font-size: 3rem;
     max-width: 70%;
     font-family: 'EB Garamond', serif;
     font-weight: none;
    /* font-family: "Raleway", sans-serif; */
-   top: -200px; /* Adjust the value to move up */
-   left: 150px; 
+   top: -30px; 
+   /* left: 150px;  */
   }
 
 
@@ -48,7 +48,7 @@
     object-fit: cover;
     transform: translate(-50%, -50%);
     z-index: -1; 
-    opacity: .9; /*trying something new*/
+    opacity: .8; /*trying something new*/
     pointer-events: auto !important; /* Ignore mouse events */
   }
   .home-btn {
@@ -57,15 +57,14 @@
     font-size: 1.5rem;
     font-family: 'EB Garamond', serif;
     border-radius: 3px;
-    background-color: rgb(161 157 157);
-    color: white;
+    background-color: #ECECEC;
+    color: black;
     cursor: pointer !important;
     pointer-events: auto !important;
     z-index: 9999;
-    text-transform: lowercase;
+    text-transform: uppercase;
     letter-spacing: 2px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
   }
 
 
@@ -196,22 +195,7 @@
 
 
 @media (max-width: 390px) {
-  .small-picture {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 20%;
-    width: 200%;
-    height: auto; 
-    max-height: 100%; 
-    object-fit: cover; 
-    object-position: 50% 30%; 
-    transform: translate(-50%, -50%);
-    z-index: -1; 
-  }
-  .background-video {
-    display: none;
-  } 
+
   .nav-items {
     display: none;
     flex-direction: column; /* Stack the items vertically */
@@ -357,9 +341,9 @@ color: white;
    top: 0; /* Adjust the value to move up */
    left: 0; 
   }
-   .background-video {
+   /* .background-video {
      display: none;
-   }  
+   }   */
 
 
    .nav-items {
@@ -483,7 +467,7 @@ color: white;
       letter-spacing: 2px;
 
     }
-    .small-picture {
+    /* .small-picture {
       display: block;
       position: absolute;
       top: 50%;
@@ -495,7 +479,7 @@ color: white;
       object-position: 50% 30%; 
       transform: translate(-50%, -50%);
       z-index: -1; 
-    }
+    } */
   }
 
  
