--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -259,6 +259,7 @@
   width: 100%;
   max-width: 300px;
   margin-bottom: 10px;
+  z-index: 9999;
 }
 
 /* Style for buttons */
@@ -270,32 +271,40 @@
   cursor: pointer;
   width: 100%;
   border: none;
+  z-index: 9999;
+  position: relative;
 }
 
 /* Primary button styles */
 .home-btn {
   background-color: #e1e0e0;
   color: black;
+  z-index: 9999;
 }
 
 .home-btn:hover {
   background-color: rgb(31, 31, 31);
+  color: white;
 }
 
 /* Extra buttons */
 .extra-buttons {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  /* gap: 10px; */
+  z-index: 9999;
+  position: relative;
 }
 
 .extra-button {
   background-color: #e1e0e0;
   color: black;
+  z-index: 9999;
 }
 
 .extra-button:hover {
   background-color: rgb(31, 31, 31);
+  color: white;
 }
 
  
@@ -318,7 +327,7 @@
     .content div {
       font-size: 2.2rem;
       /* font-weight: bold; */
-      margin-bottom: 10px;
+      /* margin-bottom: 10px; */
     }
   
   .background-image {
@@ -463,13 +472,14 @@
 
 .home-btn:hover {
   background-color: rgb(31, 31, 31);
+  color: white;
 }
 
 /* Extra buttons */
 .extra-buttons {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 .extra-button {
@@ -479,6 +489,7 @@
 
 .extra-button:hover {
   background-color: rgb(31, 31, 31);
+  color: white;
 }
 
   }
