--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -318,8 +318,9 @@
       max-width: 350px;
       margin: 0 auto;
       padding: 15px;
-      position: static; /* Removes positioning issues */
+      position: relative; /* Removes positioning issues */
       margin-top: 65%; /* Adjust this value as needed */
+      z-index: 9999;
 
     }
   
@@ -335,6 +336,7 @@
     object-position: center top; /* Adjust focus on mobile */
     opacity: 0.9; /* Slightly reduce opacity for readability */
     top: 80px;
+    z-index: -1;
 }
   }
   
