--- a/src/styles/OwlCarouselWrapper.css
+++ b/src/styles/OwlCarouselWrapper.css
@@ -55,7 +55,7 @@
 /* Style for the carousel navigation dots */
 .slick-dots {
   position: absolute;
-  bottom: 10px;
+  /* bottom: 10px; */
   left: 50%;
   transform: translateX(-50%);
   display: flex;
