--- a/src/styles/Appointment.css
+++ b/src/styles/Appointment.css
@@ -69,6 +69,7 @@ padding: 20px 5px 20px 5px;
   letter-spacing: 2px;
   font-size: 1.5rem;
   font-weight: 600;
+  border-color: black;
 }
 
 .button:hover {
