--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -101,11 +101,12 @@
 .nav-items {
   list-style: none;
   display: flex;
-  gap: 2rem; 
+  gap: 1rem; 
   margin: 0;
   padding: 0;
   margin-right: 5%;
   white-space: nowrap;
+  
 }
 
 .nav-items li {
@@ -116,7 +117,7 @@
   text-decoration: none;
   /* font-family: 'Raleway', sans-serif; */
   font-family: 'EB Garamond', serif;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: 300;
   color: #333; 
   transition: color 0.3s ease;
@@ -189,13 +190,13 @@
   .nav-items {
     display: none;
     flex-direction: column; /* Stack the items vertically */
-    background-color: #fff;
+    background-color: #f9f9f9;
     position: absolute;
     top: 100%; /* Place below the navbar */
     left: 0;
     width: 100%;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 1rem 0;
+    padding: .5rem 0;
     justify-content: center;
     text-align: center; /* Center the text */
     z-index: 10000; /* Ensure it's on top of other elements */
@@ -382,13 +383,13 @@
    .nav-items {
     display: none;
     flex-direction: column; /* Stack the items vertically */
-    background-color: #fff;
+    background-color: #f9f9f9;
     position: absolute;
     top: 100%; /* Place below the navbar */
     left: 0;
     width: 100%;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 1rem 0;
+    padding: .5rem 0;
     justify-content: center;
     text-align: center; /* Center the text */
     z-index: 10000; /* Ensure it's on top of other elements */
