--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -39,15 +39,35 @@
     display: block; /* Ensure the entire link area is clickable */
     padding: 8px 10px;
   }
+
+  .dropdown-menu li a::after {
+    content: '';
+    position: absolute;
+    bottom: -4px; 
+    left: 0;
+    width: 0;
+    height: 2px; 
+    background-color: darkgrey; 
+    transition: width 0.3s ease;
+  }
+
+  .dropdown-menu li a:hover::after {
+    width: 100%;
+  }
   
   .dropdown-menu li a:hover {
-    color: #007bff;
+    color: darkgrey; 
     background-color: #f1f1f1; /* Add a background hover effect */
   }
   
   /* Show dropdown when state is active */
   .dropdown .dropdown-menu {
     display: flex;
+    flex-direction: column;
+    top: 100%;
+    left: auto;
+    right:0;
+
   }
   
   
