--- a/src/styles/DocStack.css
+++ b/src/styles/DocStack.css
@@ -50,14 +50,150 @@
     font-family: EB Garamond;
   }
 
-  @media (max-width: 768px) {
+  a.learn-more-doc {
+    padding: 5px 10px;
+    background-color: grey;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    /* margin-top: 10px; */
+    margin-bottom: 10px;
+    font-family: 'EB Garmond', sans-serif;
+    font-size: .75rem;
+    text-decoration: none;
+  }
+  a.learn-more-doc:hover {
+    background-color: rgb(59, 58, 58);
+  }
+  a.back-to-doc:hover {
+    background-color: rgb(59, 58, 58);
+  }
+
+  a.back-to-doc {
+    padding: 10px 20px;
+    background-color: grey;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-family: 'EB Garmond', sans-serif;
+    font-size: 1rem;
+    text-decoration: none;
+    margin-top: 10%;
+  }
+
+  .doc-profile-page {
+    display: grid;
+    gap: 1rem; /* Space between rows */
+    padding: .5rem;
+    padding-top: 80px;
+    min-height: auto;
+    background-color: white;
+  }
+
+  .doc-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+    align-items: center;
+    padding: 1rem;
+    min-height: 100vh;
+    background-color: rgba(244, 243, 243, 0.955)
+  }
+
+  .doc-image img{
+    width: 100%;
+    height: auto;
+    border-radius: 2px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+  }
+
+  .doc-content {
+    font-size: 1.2rem;
+    /* font-family: 'raleway', sans-serif; */
+    font-family: 'EB Garamond', serif;
+    line-height: 1.5;
+    letter-spacing: 2px;
+    text-align: left;
+  }
+
+  .doc-content h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    /* letter-spacing: 1.5px; */
+  }
+  
+  .doc-content p {
+    /* font-size: 1.1rem;
+    line-height: 1.6; */
+    margin-bottom: 1rem;
+  }
+  
+  .doc-content ul {
+    list-style-type: disc;
+    margin-left: 1.5rem;
+    /* font-size: 1rem; */
+  }
+  
+  .doc-content ul li {
+    margin-bottom: 0.5rem;
+    /* line-height: 1.5; */
+  }
+
+  @media (max-width: 1250px) {
+    .doc-container {
+      grid-template-columns: 1fr;
+      gap: 1rem;
+      align-items: center;
+    }
+   .doc-image img {
+    display: grid;
+    margin-bottom: 5%;
+    justify-self: center;
+   }
+    }
+    
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .doc-container {
+        grid-template-columns: 1fr;
+      }
+    
+      .doc-content {
+        margin-top: 1.5rem;
+      }
+      .doc-content h1 {
+        font-size: 1.5rem;
+      }
+      .doc-content h3 {
+        font-size: 1.2rem;
+      }
+      .doc-content li {
+        font-size: 1rem;
+      }
+      a.back-to-doc {
+        margin-top: 5%;
+        font-size: .75rem;
+      }
+      .doc-stack {
+        grid-template-columns: 1fr;
+      }
+    }
+    
+
+  /* @media (max-width: 768px) {
     .doc-stack {
       grid-template-columns: 1fr;
-    }
+    } */
   
   
     /* .doc-item {
       padding: 15px;
     } */
-  }
+  
   
